better type safety.  standardized how initializationData is passed
